<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageCar"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_car"
        app:layout_constraintBottom_toBottomOf="@+id/textView_origin_city"
        app:layout_constraintStart_toEndOf="@+id/textView_origin_city"
        app:layout_constraintTop_toTopOf="@+id/textView_origin_city" />

    <TextView
        android:id="@+id/transport_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/transport_status" />

    <TextView
        android:id="@+id/urgent_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="URGENT"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/urgent"
        app:layout_constraintBottom_toBottomOf="@+id/transport_status"
        app:layout_constraintStart_toStartOf="@+id/textView_date"
        app:layout_constraintTop_toTopOf="@+id/transport_status"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Urgent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView_destination_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/textView_origin_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageCar"
        app:layout_constraintTop_toTopOf="@+id/textView_origin_city"
        tools:text="@string/destination_city" />

    <TextView
        android:id="@+id/textView_origin_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/transport_status"
        app:layout_constraintTop_toBottomOf="@+id/transport_status"
        tools:text="@string/origin_city" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        tools:text="@string/gender" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/textView_origin_city"
        app:layout_constraintTop_toBottomOf="@+id/textView_origin_city"
        tools:text="@string/name" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/textView_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="@+id/textView_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_name"
        tools:text="@string/date" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/textview_days_since_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="@+id/textView_id"
        app:layout_constraintStart_toStartOf="@+id/textView_date"
        app:layout_constraintTop_toTopOf="@+id/textView_id"
        tools:text="@string/days_since_post" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="@+id/textView_gender"
        app:layout_constraintStart_toEndOf="@+id/textView_gender"
        app:layout_constraintTop_toTopOf="@+id/textView_gender"
        tools:text="@string/id" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_id" />

</androidx.constraintlayout.widget.ConstraintLayout>