<?xml version="1.0" encoding="utf-8"?>
    <!-- Copyright (C) 2016 The Android Open Source Project
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at
              http://www.apache.org/licenses/LICENSE-2.0
         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.
    -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Layout for the editor -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/editor_activity_margin"
            tools:context=".EditorActivity">

            <!-- Status category -->
            <LinearLayout
                android:id="@+id/status_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_transport_status" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Status drop-down spinner -->
                    <Spinner
                        android:id="@+id/spinner_status"
                        style="@style/SpinnerStyle"
                        android:saveEnabled="false"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Date category -->
            <LinearLayout
                android:id="@+id/container_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_date" />
                <!-- Date field -->
                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="textStart"
                    android:hint="@string/category_date"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <!-- From category -->
            <LinearLayout
                android:id="@+id/container_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_from" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Origin City field -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_origin_city_field"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_origin_city"
                        android:inputType="textCapWords"/>
                </LinearLayout>
            </LinearLayout>

            <!-- To category -->
            <LinearLayout
                android:id="@+id/container_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_to"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/to_textview"
                    android:layout_height="@dimen/button_dimens"/>

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Destination City field -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_destination_city_field"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_destination_city"
                        android:inputType="textCapWords"/>

                    <!--Notes field -->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_notes"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:hint="@string/hint_notes"
                        android:inputType="textMultiLine|textLongMessage|textCapSentences">
                    </androidx.appcompat.widget.AppCompatEditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_map_link_toggle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/editor_activity_margin">

                <TextView
                    android:id="@+id/map_link"
                    style="@style/MapLinkStyle"
                    android:text="@string/map_link"/>

                <Switch
                    android:id="@+id/switch_urgency"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:text="Urgent"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:checked="false"
                    android:textAlignment="viewEnd"
                    android:switchTextAppearance="@style/SwitchTextAppearance"
                    android:switchPadding="8dp"
                    android:switchMinWidth="56dp"
                    android:minWidth="56dp">
                </Switch>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="@dimen/editor_activity_margin"/>

            <!-- Photo category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/editor_activity_margin">

                <!-- Label -->
                <TextView
                    android:id="@+id/details_textview"
                    android:text="@string/category_animal_details"
                    style="@style/AnimalDetails"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Photo field -->
                    <ImageView
                        android:id="@+id/animal_photo"
                        android:contentDescription="@string/animal_photo"
                        android:layout_height="200dp"
                        android:layout_width="200dp"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/transport_id_textview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:layout_marginTop="8dp"
                        tools:text="Transport ID"/>

                </LinearLayout>
            </LinearLayout>

            <!-- Name category -->
            <LinearLayout
                android:id="@+id/container_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/editor_activity_margin">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_name" />
                    <!-- Name field -->
                    <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:hint="@string/category_name"
                        android:inputType="textCapWords"
                        android:imeOptions="actionDone"/>
            </LinearLayout>

            <!-- Gender category -->
            <LinearLayout
                android:id="@+id/container_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <!-- Label -->
                <TextView
                    android:text="@string/category_gender"
                    style="@style/CategoryStyle" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Gender drop-down spinner -->
                    <Spinner
                        android:id="@+id/spinner_gender"
                        style="@style/SpinnerStyle"
                        android:saveEnabled="false"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Measurement category -->
            <LinearLayout
                android:id="@+id/container_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    android:text="@string/category_measurement"
                    style="@style/CategoryStyle" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pet_weight"
                        android:hint="@string/hint_weight"
                        android:inputType="number"
                        style="@style/EditorFieldStyle" />

                    <!-- Units for weight (kg) -->
                    <TextView
                        android:id="@+id/label_weight_units"
                        android:text="@string/unit_weight"
                        style="@style/EditorUnitsStyle"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/action_share"
        app:borderWidth="0dp"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:layout_anchor="@id/NestedScrollView"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:rippleColor="@color/colorPrimaryDark"
        app:srcCompat="@drawable/share_fab"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


