<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout for the RecyclerView -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/ToolbarTextCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/ToolbarTextExpanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_icon_image"
                android:layout_gravity="start"
                app:layout_collapseMode="parallax"
                android:src="@drawable/launch_icon"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/appbar_surface_elevation"
                android:theme="@style/AppTheme.NoActionBar"
                app:contentInsetLeft="8dp"
                app:contentInsetStart="8dp"
                app:layout_collapseMode="pin"
                app:titleTextColor="@android:color/white">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/icon_empty_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/icon_person_walking_dog"
            android:src="@drawable/ic_icon_emptyview" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/empty_view_text"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/network_error_tv"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/error_network"
        android:textSize="16sp"
        android:visibility="invisible"
        tools:text="Network Error" />

    <ProgressBar
        android:layout_gravity="bottom"
        android:id="@+id/progress_bar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_below="@id/network_error_tv"
        android:visibility="invisible"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:visibility="visible"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_transports"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="4dp"
            android:scrollbarStyle="outsideOverlay">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_share"
        app:borderWidth="0dp"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:layout_anchor="@id/swipeRefreshLayout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:rippleColor="@color/colorPrimaryDark"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_add_pet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>